--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,7 +2,7 @@
     display: flex;
 }
 
-.flex-column{
+.flex-column {
     flex-direction: column;
 }
 
@@ -52,6 +52,9 @@ body {
     margin-top: 1em;
     font-style: italic;
 }
+.head>.subtitle+.subtitle{
+    margin-top: 0;
+}
 
 .topic {
     display: flex;
@@ -60,13 +63,12 @@ body {
     margin-top: 2em;
 }
 
-.topic .topic{
+.topic .topic {
     padding-left: 1rem;
-    font-size: smaller;
-    border: 0px;
-    border-left: 1px;
-    border-color: rgba(0,0,0,0.5);
-    border-style:solid;
+    border: 0;
+    border-left: 1pt;
+    border-color: rgba(0, 0, 0, 0.5);
+    border-style: solid;
 }
 
 .topic>.title {
@@ -74,6 +76,8 @@ body {
     justify-content: center;
     font-size: larger;
     font-weight: lighter;
+    font-variant: small-caps;
+    margin-bottom: 5pt;
 }
 
 .topic>.content {
@@ -83,15 +87,19 @@ body {
     font-weight: normal;
 }
 
-.topic>.content>.column{
+.topic>.content>.column {
     display: flex;
     flex-direction: column;
 }
 
-img+.image-description{
-    color:rgba(0,0,0,0.5);
+img+.image-description {
+    color: rgba(0, 0, 0, 0.5);
     font-style: italic;
     font-size: smaller;
+}
+
+.table-of-contents a {
+    text-decoration: none;
 }
 
 /*phone size*/
