--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -28,9 +28,14 @@ body {
     justify-content: center;
 }
 
+.title {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+}
+
 .head>.title {
     font-size: xx-large;
-    text-align: center;
 }
 
 .head>.authors {
@@ -53,7 +58,8 @@ body {
     margin-top: 1em;
     font-style: italic;
 }
-.head>.subtitle+.subtitle{
+
+.head>.subtitle+.subtitle {
     margin-top: 0;
 }
 
@@ -72,12 +78,14 @@ body {
 }
 
 .topic>.title {
-    display: flex;
-    justify-content: center;
     font-size: larger;
     font-weight: lighter;
     font-variant: small-caps;
     margin-bottom: 5pt;
+}
+
+.content{
+    text-align: justify;
 }
 
 .topic>.content {
