--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -29,9 +29,9 @@ body {
 }
 
 .title {
-    text-align: center;
     display: flex;
     justify-content: center;
+    color: rgb(25,25,112);
 }
 
 .head>.title {
@@ -73,15 +73,19 @@ body {
     padding-left: 1rem;
     border: 0;
     border-left: 1pt;
-    border-color: rgba(0, 0, 0, 0.5);
+    border-color: rgb(25,25,112);
     border-style: solid;
 }
 
 .topic>.title {
-    font-size: larger;
-    font-weight: lighter;
+    font-size:x-large;
     font-variant: small-caps;
     margin-bottom: 5pt;
+}
+.topic .topic>.title{
+    font-size: large;
+    font-variant:normal;
+    justify-content:start;
 }
 
 .content{
